--- a/views/admin/layout/header.ejs
+++ b/views/admin/layout/header.ejs
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.min.css">
   <script src="https://unpkg.com/cropperjs@next"></script>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap4.min.css">
   <style>
     .nav-pills li a:hover {
       background-color: #f2c30a;
